added wallet api spec
